k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-server

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-server

  template:
    metadata:
      labels:
        app: api-server

    spec:
      containers:
        - name: api-server

          image: 586631277275.dkr.ecr.ap-south-1.amazonaws.com/api:1
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
