k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-server

spec:
  replicas: 1

  selector:
    matchLabels:
      app: web-server

  template:
    metadata:
      labels:
        app: web-server

    spec:
      containers:
        - name: web-server

          image: 586631277275.dkr.ecr.ap-south-1.amazonaws.com/web:1
          imagePullPolicy: Always

          ports:
            - containerPort: 80
