k8s/web-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-green-server

spec:
  replicas: 1

  selector:
    matchLabels:
      app: web-green-server

  template:
    metadata:
      labels:
        app: web-green-server

    spec:
      containers:
        - name: web-green-server

          image: 586631277275.dkr.ecr.ap-south-1.amazonaws.com/web:2  
          imagePullPolicy: Always

          ports:
            - containerPort: 80
