k8s/web-green-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-green-server

spec:
  selector:
    app: web-green-server

  ports:
    - port: 80
      targetPort: 80

  type: NodePort
